<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:fillViewport="true"
    android:gravity="center"
    tools:context=".login_using_number">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/getStarted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/open_sans"
                android:text="@string/getStarted"
                android:textColor="#818181"
                android:textSize="48sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.28"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView12345" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/open_sans"
                android:text="@string/enter_your_phone_number"
                android:textColor="#888888"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/getStarted"
                app:layout_constraintTop_toBottomOf="@+id/getStarted" />

            <EditText
                android:id="@+id/editTextPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/rectangle_edit_text"
                android:ems="13"
                android:fontFamily="@font/open_sans"
                android:hint="@string/enter_mobile_number"
                android:importantForAutofill="no"
                android:inputType="phone"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <Button
                android:id="@+id/button"
                style="@style/google_btn"
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:layout_marginTop="32dp"
                android:drawableLeft="@drawable/icons8_google"
                android:text="@string/continue_google"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextPhone"
                tools:ignore="RtlHardcoded" />


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="160dp"
                android:layout_height="105dp"
                android:layout_marginTop="60dp"
                android:contentDescription="@string/login_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/education" />

            <TextView
                android:id="@+id/textView12345"
                style="@style/logo_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/carter_one"
                android:text="@string/app_name"
                app:layout_constraintEnd_toEndOf="@+id/imageView"
                app:layout_constraintStart_toStartOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/button">
                <Button
                    android:id="@+id/btn_continue"
                    style="@style/proceed_btn"
                    android:layout_width="350dp"
                    android:layout_height="60dp"
                    android:text="@string/proceed"
                    android:layout_gravity="center"
                    tools:layout_editor_absoluteX="66dp"
                    tools:layout_editor_absoluteY="545dp" />
                
                <ProgressBar
                    android:id="@+id/progress_bar_send_otp"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:visibility="gone"/>
            </FrameLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</ScrollView>
