<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="#A4EDEDED"
    tools:context=".HomeFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginTop="5dp"
            android:padding="10dp"
            android:background="#27FF1BAB">

                <TextView
                    android:id="@+id/home_slogan"
                    android:layout_width="300sp"
                    android:paddingStart="20dp"
                    android:layout_height="wrap_content"
                    android:text="@string/home_slogan"
                    android:fontFamily="@font/carter_one"
                    android:textSize="25sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/home_slogan"
                    android:layout_toEndOf="@+id/home_slogan"
                    android:src="@drawable/plants"
                    app:layout_constraintBottom_toBottomOf="@+id/home_slogan"
                    app:layout_constraintStart_toEndOf="@+id/home_slogan" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingBottom="20dp"
            android:background="#FFFFFF">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="18dp"
                android:fontFamily="@font/open_sans"
                android:text="@string/edubride_has_been_upto"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView7"
                android:layout_width="170dp"
                android:layout_height="130dp"
                android:layout_marginTop="24dp"
                android:elevation="20dp"
                app:cardBackgroundColor="#F5BAFF"
                app:cardCornerRadius="20dp"
                app:layout_constraintEnd_toEndOf="@+id/textView5"
                app:layout_constraintHorizontal_bias="0.43"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="40dp"
                    android:text="@string/_100k"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="65dp"
                    android:text="@string/monthly_donors" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView5"
                android:layout_width="170dp"
                android:layout_height="130dp"
                android:layout_marginStart="8dp"
                android:elevation="20dp"
                app:cardBackgroundColor="#FFBAD2"
                app:cardCornerRadius="20dp"
                app:layout_constraintBottom_toBottomOf="@+id/cardView7"
                app:layout_constraintStart_toEndOf="@+id/cardView7"
                app:layout_constraintTop_toTopOf="@+id/cardView7">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="40dp"
                    android:text="@string/proud"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="65dp"
                    android:text="@string/changemaker" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView8"
                android:layout_width="170dp"
                android:layout_height="130dp"
                android:layout_marginTop="8dp"
                android:elevation="20dp"
                app:cardBackgroundColor="#E8FFCE"
                app:cardCornerRadius="20dp"
                app:layout_constraintEnd_toEndOf="@+id/cardView7"
                app:layout_constraintStart_toStartOf="@+id/cardView7"
                app:layout_constraintTop_toBottomOf="@+id/cardView7">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="40dp"
                    android:text="@string/_10_cr"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="65dp"
                    android:text="@string/contribution" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView6"
                android:layout_width="170dp"
                android:layout_height="130dp"
                android:elevation="20dp"
                app:cardBackgroundColor="#A1D5FF"
                app:cardCornerRadius="20dp"
                app:layout_constraintBottom_toBottomOf="@+id/cardView8"
                app:layout_constraintEnd_toEndOf="@+id/cardView5"
                app:layout_constraintStart_toStartOf="@+id/cardView5">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="40dp"
                    android:text="@string/_10k"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="65dp"
                    android:text="@string/students_impacted"/>

            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_horizontalHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollbars="horizontal"/>
    </LinearLayout>

</ScrollView>