<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".OTP_verify">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="216dp"
                android:layout_height="202dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/otp_verify_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/otp_verification"
                android:textSize="34sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/enter_otp"
                android:textColor="#878787"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/set_phn_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Your Number Show Here"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <EditText
                android:id="@+id/inputotp1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/rectangle_edit_text"
                android:ems="2"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/inputotp2"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/set_phn_number"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/inputotp2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/rectangle_edit_text"
                android:ems="2"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/inputotp3"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/inputotp1"
                app:layout_constraintTop_toBottomOf="@+id/set_phn_number"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/inputotp3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/rectangle_edit_text"
                android:ems="2"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/inputotp4"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/inputotp2"
                app:layout_constraintTop_toBottomOf="@+id/set_phn_number"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/inputotp4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/rectangle_edit_text"
                android:ems="2"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/inputotp5"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/inputotp3"
                app:layout_constraintTop_toBottomOf="@+id/set_phn_number"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/inputotp5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/rectangle_edit_text"
                android:ems="2"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/inputotp6"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/inputotp4"
                app:layout_constraintTop_toBottomOf="@+id/set_phn_number"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/inputotp6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/rectangle_edit_text"
                android:ems="2"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/inputotp5"
                app:layout_constraintTop_toBottomOf="@+id/set_phn_number"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="Didn't receive the OTP"
                android:textColor="#8A8A8A"
                app:layout_constraintBottom_toBottomOf="@+id/resend_otp"
                app:layout_constraintEnd_toStartOf="@+id/resend_otp"
                app:layout_constraintTop_toTopOf="@+id/resend_otp" />

            <TextView
                android:id="@+id/resend_otp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:text="RESEND OTP AGAIN"
                android:textColor="#03A9F4"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/inputotp6"
                app:layout_constraintTop_toBottomOf="@+id/inputotp4" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@+id/textView6"
                android:layout_marginTop="40dp">
                <Button
                    android:id="@+id/otp_submit"
                    android:layout_gravity="center"
                    style="@style/proceed_btn"
                    android:layout_width="350dp"
                    android:layout_height="60dp"
                    android:text="submit" />
                <ProgressBar
                    android:id="@+id/progess_bar_verify_otp"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:visibility="gone"/>
            </FrameLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</ScrollView>